# playground

./: .gitignore
gpu_solver/gpu-lib/: CMakeLists.txt
gpu_solver/gpu-lib/src/: auxil.cpp  biluk.cpp  bilut.cpp  blusol.cu  datatype.h  domdecomp.cpp  ds.cpp  format.cpp  ggexp.cpp  gmres.cpp  gpusollib.h  ic.cpp  iluk.cpp  ilut.cpp  interface-hui.cpp  io.cpp  lanczos.cpp  level.cpp  lspolyn.cpp  mcilu0.cu  mcsor.cpp  mem.cu  mmd.cpp  pcg.cpp  pitsol.cpp  precon.cpp  protos.h  rcm.H  rcm.cpp  reorder.cpp  reorder_mc.cpp  spmv.cu  ssor.cu  triangsol.cu  utils.cu
solver/: CMakeLists.txt  src_list.txt
solver/SparseLib++/1.7/: makefile.def
solver/SparseLib++/1.7/include/: comprow_double.h  iohb_double.h
solver/SparseLib++/1.7/mv/include/: mvvd.h
solver/SparseLib++/1.7/mv/src/: mvblasc.cc  mvblasd.cc  mvvd.cc  mvvdio.cc
solver/SparseLib++/1.7/src/: comprow_double.cc  diagpre_double.cc  ilupre_double.cc  iohb.c  iohb_double.cc
solver/gsolver/: matrix_convert.cpp  matrix_convert.h  matrix_reader.cpp  matrix_reader.h  mmio.cpp  utility.cpp  utility.h
solver/include/: gmres.h
solver/testing/: tbicgsta.cc  tgmres.cc
